# email_guard

./: .dockerignore  .replit  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  Dockerfile  FIREBASE_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  REPLIT_DEPLOYMENT.md  VERCEL_DEPLOYMENT.md  VERCEL_REPLIT_DEPLOYMENT.md  deploy-setup.sh  deploy.bat  deploy.sh  docker-compose.yml  firebase.json  nixpacks.toml  pyproject.toml  railway.json  reflection.md  render.yaml  requirements-minimal.txt  requirements.txt  test_deployment.py  vercel.json
ai/: email_guard.py
api/: app.py  requirements.txt
backend/: .replit  app.py  email_guardian.db  requirements.txt
docs/: README.md  architecture.md  security_notes.md
firebase/: firestore.indexes.json  firestore.rules
firebase/functions/: index.js  package.json
frontend/: DEPLOYMENT.md  Dockerfile  Dockerfile.dev  deploy-vercel.bat  deploy-vercel.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/: ApiKeyManager.js  EmailScanner.js  Logo.js  ScanHistory.js  Stats.js  ThemeToggle.js
frontend/src/contexts/: ThemeContext.js
frontend/src/services/: api.js
tests/: test_email_guard.py
